fixed csproj file

--- a/UTD_P2/UTD_P2/UTD_P2.csproj
+++ b/UTD_P2/UTD_P2/UTD_P2.csproj
@@ -47,9 +47,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="inRangeCheck.cs" />
     <Compile Include="Interface.cs" />
-    <Compile Include="Level1.cs" />
-    <Compile Include="Level2.cs" />
-    <Compile Include="Level3.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="MainMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
