added isActive to level class

--- a/UTD_P2/UTD_P2/UTD_P2.csproj
+++ b/UTD_P2/UTD_P2/UTD_P2.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Level.cs" />
     <Compile Include="MainMenu.cs" />
     <Compile Include="MenuButton.cs" />
+    <Compile Include="PauseMenu.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
