added controllable player for testing, fixed rotation animation, added Assets for Towers and Projectiles

--- a/UTD_P2/UTD_P2/UTD_P2.csproj
+++ b/UTD_P2/UTD_P2/UTD_P2.csproj
@@ -1302,6 +1302,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Assets\TD\Preview_KenneyNL.png" />
+    <Content Include="Content\Assets\TD\Projectiles\bullet.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Assets\TD\Projectiles\missile.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Assets\TD\Projectiles\slowProj.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Assets\TD\Sample.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
