added Range indicator

--- a/UTD_P2/UTD_P2/UTD_P2.csproj
+++ b/UTD_P2/UTD_P2/UTD_P2.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BuildButton.cs" />
     <Compile Include="Button.cs" />
+    <Compile Include="DrawCircle.cs" />
     <Compile Include="EnemyController.cs" />
     <Compile Include="ContentConverter.cs" />
     <Compile Include="DoubleShotTower.cs" />
