--- a/UTD_P2/UTD_P2/UTD_P2.csproj
+++ b/UTD_P2/UTD_P2/UTD_P2.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ContentConverter.cs" />
     <Compile Include="DoubleShotTower.cs" />
     <Compile Include="Enemys.cs" />
+    <Compile Include="Explosion.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="inRangeCheck.cs" />
@@ -1437,6 +1438,12 @@
     </Content>
     <Content Include="Content\Assets\TD\Preview_KenneyNL.png" />
     <Content Include="Content\Assets\TD\Projectiles\bullet.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Assets\TD\Projectiles\explosionRocket.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Assets\TD\Projectiles\explosionSlow.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Assets\TD\Projectiles\missile.png">
